Update to index.html, styles-index.css and script-index.js.

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
                     <div class="d-flex flex-wrap p-apod">
                         <div id="apod-date" class="col-12 d-flex justify-content-center align-items-center p-3 mb-5 rounded text-background text-white"></div>
-                        <div id="apod-image" class="col-12 d-flex justify-content-center align-items-center mb-5 rounded"></div>
+                        <div id="apod-media" class="col-12 d-flex justify-content-center align-items-center mb-5 rounded text-background text-white"></div>
                         <div id="apod-title" class="col-12 d-flex justify-content-center p-3 rounded text-background text-white"></div>
                         <div id="apod-explanation" class="col-12 d-flex justify-content-center p-3 rounded text-background text-white"></div>
                         <div id="apod-copyright" class="col-12 d-flex justify-content-center p-3 rounded text-background text-white"></div>
